--- a/src/main/resources/templates/newLogin.html
+++ b/src/main/resources/templates/newLogin.html
@@ -187,6 +187,9 @@
         })
       })
 
+      newPassword.on('input', chckValidate)
+      newPasswordChk.on('input', chckValidate)
+
     })
 
     /* 회원가입 -> 비번,비번확인 일치 validation */
