--- a/src/main/resources/templates/layouts/error.html
+++ b/src/main/resources/templates/layouts/error.html
@@ -3,6 +3,7 @@
       xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
+    <title>HONG SHOP</title>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no"/>
     <th:block th:replace="fragments/head :: head"></th:block>
