--- a/src/main/resources/templates/layouts/default.html
+++ b/src/main/resources/templates/layouts/default.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no"/>
     <th:block th:replace="fragments/head :: head"></th:block>
-    <th:block layout:fragment="head"></th:block>
+    <layout:fragment th:fragment="head"></layout:fragment>
 </head>
 
 <!--<body class="container-xl">-->
