--- a/src/main/resources/templates/fragments/script.html
+++ b/src/main/resources/templates/fragments/script.html
@@ -1,13 +1,9 @@
 <th:block th:fragment="script">
     <script th:src="@{'/assets/js/jquery/jquery.min.js'}"></script>
     <script th:src="@{'/assets/js/bootstrap/bootstrap.bundle.min.js'}"></script>
-    <script th:src="@{'/assets/js/table/tui-grid.js'}"></script>
     <script th:src="@{'/assets/js/table/tabulator.min.js'}"></script>
-    <script th:src="@{'/assets/js/core/util.js'}"></script>
     <script th:src="@{'/assets/js/feather/feather.js'}"></script>
     <script th:src="@{'/assets/js/sweetalert2/sweetalert2.js'}"></script>
     <script th:src="@{'/assets/js/ckeditor/ckeditor-37.0.1.js'}"></script>
-    <script th:src="@{'/assets/js/ckeditor/MyUploadAdapter.js'}"></script>
-    <script th:src="@{'/assets/js/core/file.js'}"></script>
-    <script th:src="@{'/assets/js/core/tabulator.js'}"></script>
+    <script th:src="@{'/assets/js/core/hongshop.min.js'}"></script>
 </th:block>
