commit 206 : js file 1개로 합치기

--- a/src/main/resources/templates/fragments/script.html
+++ b/src/main/resources/templates/fragments/script.html
@@ -1,9 +1,5 @@
 <th:block th:fragment="script">
-    <script th:src="@{'/assets/js/jquery/jquery.min.js'}"></script>
-    <script th:src="@{'/assets/js/bootstrap/bootstrap.bundle.min.js'}"></script>
-    <script th:src="@{'/assets/js/table/tabulator.min.js'}"></script>
-    <script th:src="@{'/assets/js/feather/feather.js'}"></script>
-    <script th:src="@{'/assets/js/sweetalert2/sweetalert2.js'}"></script>
-    <script th:src="@{'/assets/js/ckeditor/ckeditor-37.0.1.js'}"></script>
     <script th:src="@{'/assets/js/core/hongshop.min.js'}"></script>
+    <script th:src="@{'/assets/js/hongshop.etc.min.js'}"></script>
+    <!-- jquery.min.js , bootstrap.bundle.min.js, tabulator.min.js, feather.js, sweetalert2.js, ckeditor-37.0.1.js -->
 </th:block>
