commit 207 : 텍스트 수정

--- a/src/main/resources/templates/manager/coupon.html
+++ b/src/main/resources/templates/manager/coupon.html
@@ -194,7 +194,7 @@
 
                     <!-- Modal Header -->
                     <div class="modal-header">
-                        <h4 class="modal-title">쿠폰등록할 사용자 찾기</h4>
+                        <h4 class="modal-title">쿠폰 발급할 사용자 찾기</h4>
                         <button type="button" class="btn-close" id="close-choose-user-modal-btn" data-bs-dismiss="modal"></button>
                     </div>
 
